--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omnipay/common",
+    "name": "comnipay/common",
     "type": "library",
     "description": "Common components for Omnipay payment processing library",
     "keywords": [
@@ -39,7 +39,6 @@
     },
     "require": {
         "php": "^5.6|^7",
-        "php-http/client-implementation": "^1",
         "php-http/message": "^1.5",
         "php-http/discovery": "^1.2.1",
         "symfony/http-foundation": "^2.1|^3|^4|^5",
