--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "redq-omnipay/common",
+    "name": "omnipay/common",
     "type": "library",
     "description": "Common components for Omnipay payment processing library",
     "keywords": [
